<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorBlanco"
    android:minHeight="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlanco"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-1dp"
            android:text="@string/Encuesta"
            android:textColor="@color/colorNegro"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titleMercaTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/merca_plaza"
            android:textColor="@color/greenMPV"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titlePlazaTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/popular"
            android:textColor="#e5322c"
            android:textSize="23sp"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.v7.widget.Toolbar>